config layout bug time

--- a/css/config.css
+++ b/css/config.css
@@ -197,7 +197,7 @@ h4{
   }
     .inputTime{
       font-size: 3.6vw;
-      width: 62px;
+      width: 26%;
     }
 
     .switch {
